Squashable commit; refining
Signed-off-by: Laird Nelson <ljnelson@gmail.com>